--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "axios": "^0.15.3",
     "babel-runtime": "^6.20.0",
+    "eslint": "^3.18.0",
+    "eslint-plugin-meteor": "^4.0.1",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
@@ -15,5 +17,15 @@
     "react-router": "^4.0.0",
     "react-router-bootstrap": "^0.23.1",
     "react-router-dom": "^4.0.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.1",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-import-resolver-meteor": "^0.3.4",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-meteor": "^4.0.1",
+    "eslint-plugin-react": "^6.10.3"
   }
 }
