--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "babel-runtime": "^6.23.0",
     "eslint": "^3.18.0",
     "eslint-plugin-meteor": "^4.0.1",
+    "jquery": "^3.2.1",
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
+    "react-hoverbox": "^1.0.398",
     "react-router": "^4.0.0",
     "react-router-bootstrap": "^0.23.1",
     "react-router-dom": "^4.0.0"
