--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "enzyme": "^2.8.2",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-import-resolver-meteor": "^0.3.4",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-meteor": "^4.0.1",
-    "eslint-plugin-react": "^6.10.0"
+    "eslint-plugin-react": "^6.10.0",
+    "faker": "^4.1.0",
+    "mocha": "^3.2.0"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
