--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "meteor-node-stubs": "~0.2.4",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
+    "react-addons-test-utils": "^15.5.1",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-hoverbox": "^1.0.398",
     "react-router": "^4.0.0",
     "react-router-bootstrap": "^0.23.1",
-    "react-router-dom": "^4.0.0"
+    "react-router-dom": "^4.0.0",
+    "react-test-renderer": "^15.5.4"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
