--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-meteor": "^4.0.1",
     "eslint-plugin-react": "^6.10.0",
     "faker": "^4.1.0",
+    "mocha-lcov-reporter":"1.3.0",
     "mocha": "^3.2.0",
     "spacejam": "https://github.com/serut/spacejam/tarball/windows-suppport-rc4"
   },
@@ -51,6 +52,7 @@
       "plugin:meteor/recommended"
     ],
     "settings": {
+      "meteor/no-session" : "off",
       "import/resolver": "meteor"
     },
     "rules": {
